Revision history for Test-Harness

3.04
        - Fixed output leakage with really_quiet set.
        - Progress reports for tests without plans now show
          "143/?" instead of "143/0".
        - Made TAP::Harness::runtests support aliases for test names.

3.03    2007-11-17
        - Fixed some little bugs-waiting-to-happen inside
          TAP::Parser::Grammar.
        - Added parser_args callback to TAP::Harness.
        - Made @INC propagation even more compatible with 2.64 so that
          parrot still works *and* #30796 is fixed.

3.02    2007-11-15
        - Process I/O now unbuffered, uses sysread, plays better with
          select. Fixes #30740.
        - Made Test::Harness @INC propagation more compatible with 2.64.
          Was breaking Parrot's test suite.
        - Added HARNESS_OPTIONS (#30676)

3.01    2007-11-12
        - Fix for RHEL incpush.patch related failure.
        - Output real time of test completion with --timer
        - prove -b adds blib/auto to @INC
        - made SKIP plan parsing even more liberal for pre-v13 TAP

3.00    2007-11-06
        - Non-dev release. No changes since 2.99_09.

2.99_09 2007-11-05
        - Implemented TODO-in-PLAN syntax for TAP version 12 and earlier.

2.99_08 2007-11-04
        - Tiny changes. New version pushed to get some smoke coverage.

2.99_07 2007-11-01
        - Fix for #21938: Unable to handle circular links
        - Fix for #24926: prove -b and -l should use absolute paths
        - Fixed prove switches. Big oops. How the hell did we miss that?
        - Consolidated quiet, really_quiet, verbose into verbosity.
        - Various VMS related fixes to tests

2.99_06 2007-10-30
        - Added skip_all method to TAP::Parser.
        - Display reason for skipped tests.
        - make test now self tests.

2.99_05 2007-10-30
        - Fix for occasional rogue -1 exit code on Windows.
        - Fix for @INC handling under CPANPLUS.
        - Added real time to prove --timer output