@@ -1,0 +1,23 @@
+print <<DUMMY_TEST;
+TAP version 14
+1..4
+begin 1 First block
+    1..3
+    ok 1 FB: 1
+    not ok 2 FB: 2
+    ok 3 FB: 3
+not ok 1 FB: Summary
+ok 2 A test
+ok 3 and another
+begin 4 Second block
+    begin 1 Nested block
+        ok 1 NB: 1
+        ok 2 NB: 2
+        1..2
+    ok 1 NB: Summary
+    begin 2
+        1..0 # SKIP
+    ok 2
+    1..2
+ok 4 SB: Summary
+DUMMY_TEST
